@@ -123,6 +123,11 @@ Bug fixes
 * LUCENE-5559: Add additional argument validation for CapitalizationFilter
   and CodepointCountFilter. (Ahmet Arslan via Robert Muir)
 
+Test Framework
+
+* LUCENE-5622: Fail tests if they print over the given limit of bytes to 
+  System.out or System.err. (Robert Muir, Dawid Weiss)
+
 ======================= Lucene 4.8.0 =======================
 
 System Requirements
